# educational_platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 5487d511e463_initial_migration.py
app/: main.py
app/api/: __init__.py
app/api/routes/: user.py
app/application/dto/: user.py
app/application/use_cases/: base.py  interactor.py  user.py
app/domain/adapters/: jwt_token.py  password_hash.py
app/domain/entities/: base.py  user.py
app/domain/repositories/: user.py
app/domain/value_objects/: idvo.py
app/infrastructure/: config.py  container.py
app/infrastructure/database/: manager.py
app/infrastructure/database/models/: __init__.py  base.py  user.py
app/infrastructure/dependencies/: __init__.py  database.py  repositories.py  security.py
app/infrastructure/dependencies/interactors/: user.py
app/infrastructure/repositories/: user.py
app/infrastructure/security/: jwt_token.py  jwt_utils.py  password_hash.py  password_hasher.py
migrations/: env.py
migrations/versions/: 20575eb8172d_initial_migration.py
