[tool.poetry]
name = "educational-platform"
version = "0.1.0"
description = ""
authors = ["iogannR <rromadiniv98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.101.0"
sqlalchemy = {extras = ["all"], version = "^2.0.36"}
alembic = "^1.13.3"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.0"
uvicorn = "^0.32.0"
setuptools = "^75.2.0"
wheel = "^0.44.0"
dishka = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
